[gd_scene load_steps=18 format=2]

[ext_resource path="res://producto/scripts/Ritmo/NivelRitmico.gd" type="Script" id=1]
[ext_resource path="res://producto/scenes/Ritmo/Conductor.tscn" type="PackedScene" id=2]
[ext_resource path="res://producto/assets/img/Ritmo/Background.jpg" type="Texture" id=3]
[ext_resource path="res://producto/assets/music/1_oblivion.mp3" type="AudioStream" id=4]
[ext_resource path="res://producto/assets/img/Ritmo/Note.png" type="Texture" id=5]
[ext_resource path="res://producto/assets/img/Ritmo/fr_2.png" type="Texture" id=6]
[ext_resource path="res://producto/assets/img/Ritmo/fr_1.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "cambio_color_1"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.486275, 0.819608, 1 ), Color( 0.64, 0.38, 0.38, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "cambio_color_2"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.64, 0.38, 0.38, 1 ), Color( 0.63, 0.83, 0.68, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "cambio_color_3"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.63, 0.83, 0.68, 1 ), Color( 0.49, 0.49, 0.82, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 231.481
height = 125.926

[sub_resource type="CapsuleShape2D" id=5]
radius = 211.162
height = 143.204

[sub_resource type="CapsuleShape2D" id=6]
radius = 207.361
height = 144.919

[sub_resource type="DynamicFontData" id=7]
font_path = "res://producto/assets/fonts/AmberTastePro-Bold.ttf"

[sub_resource type="DynamicFont" id=8]
size = 42
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://producto/assets/fonts/AmberTastePro-Bold.ttf"

[sub_resource type="DynamicFont" id=10]
size = 42
font_data = SubResource( 9 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.486275, 0.486275, 0.819608, 1 )
texture = ExtResource( 3 )
centered = false

[node name="bot_l" type="TextureRect" parent="Background"]
modulate = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
margin_left = 30.0
margin_top = 624.0
margin_right = 161.0
margin_bottom = 700.0
texture = ExtResource( 6 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bot_r" type="TextureRect" parent="Background"]
modulate = Color( 0.12549, 0.12549, 0.12549, 1 )
margin_left = 1119.0
margin_top = 624.0
margin_right = 1250.0
margin_bottom = 700.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_l" type="TextureRect" parent="Background"]
modulate = Color( 0.12549, 0.12549, 0.12549, 1 )
margin_left = 30.0
margin_top = 20.0
margin_right = 160.0
margin_bottom = 88.0
texture = ExtResource( 7 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_r" type="TextureRect" parent="Background"]
modulate = Color( 0.12549, 0.12549, 0.12549, 1 )
margin_left = 1120.0
margin_top = 20.0
margin_right = 1250.0
margin_bottom = 88.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
anims/cambio_color_1 = SubResource( 1 )
anims/cambio_color_2 = SubResource( 2 )
anims/cambio_color_3 = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 440, 608 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Sprite"]
visible = false
scale = Vector2( 1.2, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 4.62976, 5.55566 )
shape = SubResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 640, 608 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 5 )

[node name="Area2D2" type="Area2D" parent="Sprite2"]
visible = false
scale = Vector2( 1.2, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2/Area2D2"]
shape = SubResource( 5 )

[node name="Sprite3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 840, 608 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 5 )

[node name="Area2D3" type="Area2D" parent="Sprite3"]
visible = false
scale = Vector2( 1.2, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3/Area2D3"]
shape = SubResource( 6 )

[node name="Sprite4" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 573, 608 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 5 )

[node name="Area2D4" type="Area2D" parent="Sprite4"]
visible = false
scale = Vector2( 1.2, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite4/Area2D4"]
shape = SubResource( 6 )

[node name="Sprite5" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 707, 608 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D5" type="Area2D" parent="Sprite5"]
visible = false
scale = Vector2( 1.2, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite5/Area2D5"]
shape = SubResource( 6 )

[node name="Conductor" parent="." instance=ExtResource( 2 )]
stream = ExtResource( 4 )

[node name="Score" type="Label" parent="."]
margin_left = 50.0
margin_top = 357.0
margin_right = 221.0
margin_bottom = 412.0
custom_fonts/font = SubResource( 8 )
text = "Puntaje:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="."]
margin_left = 992.0
margin_top = 360.0
margin_right = 1236.0
margin_bottom = 407.0
custom_fonts/font = SubResource( 10 )
text = "Vamos!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboMultiplicador" type="Label" parent="."]
margin_left = 56.0
margin_top = 400.0
margin_right = 203.0
margin_bottom = 455.0
custom_fonts/font = SubResource( 8 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabel" type="Label" parent="."]
margin_left = 969.0
margin_top = 400.0
margin_right = 1262.0
margin_bottom = 447.0
custom_fonts/font = SubResource( 10 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 160, 192 )
emitting = false
amount = 1000
lifetime = 1.2
explosiveness = 0.5
spread = 180.0
gravity = Vector2( 0, -2 )
initial_velocity = 120.0
color = Color( 1, 0, 0.913725, 1 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2( 1120, 192 )
emitting = false
amount = 1000
lifetime = 1.2
explosiveness = 0.5
spread = 180.0
gravity = Vector2( 0, -2 )
initial_velocity = 120.0
color = Color( 1, 0, 0.913725, 1 )

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
position = Vector2( 160, 576 )
emitting = false
amount = 1000
lifetime = 1.2
explosiveness = 0.5
spread = 180.0
gravity = Vector2( 0, -2 )
initial_velocity = 120.0
color = Color( 1, 0, 0.913725, 1 )

[node name="CPUParticles2D4" type="CPUParticles2D" parent="."]
position = Vector2( 1120, 576 )
emitting = false
amount = 1000
lifetime = 1.2
explosiveness = 0.5
spread = 180.0
gravity = Vector2( 0, -2 )
initial_velocity = 120.0
color = Color( 1, 0, 0.913725, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 15.0

[node name="GameOver" type="VBoxContainer" parent="."]
visible = false
margin_left = 480.0
margin_top = 233.0
margin_right = 800.0
margin_bottom = 535.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ScoreTotal" type="Label" parent="GameOver"]
margin_right = 320.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 8 )
text = "Puntaje total:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="Label" parent="GameOver"]
margin_top = 51.0
margin_right = 320.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 8 )
text = "Bien:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Good" type="Label" parent="GameOver"]
margin_top = 102.0
margin_right = 320.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 8 )
text = "Muy bien:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perfect" type="Label" parent="GameOver"]
margin_top = 153.0
margin_right = 320.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 8 )
text = "Excelente:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missed" type="Label" parent="GameOver"]
margin_top = 204.0
margin_right = 320.0
margin_bottom = 251.0
custom_fonts/font = SubResource( 8 )
text = "Fallada:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxCombo" type="Label" parent="GameOver"]
margin_top = 255.0
margin_right = 320.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 8 )
text = "Max combo:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NombreCancion" type="Label" parent="."]
visible = false
margin_left = 271.0
margin_top = 110.0
margin_right = 1010.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 8 )
text = "Libertango - Astor Piazzolla (Nivel 3)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_exited" from="Sprite/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_exited" from="Sprite2/Area2D2" to="." method="_on_Area2D2_area_exited"]
[connection signal="area_exited" from="Sprite3/Area2D3" to="." method="_on_Area2D3_area_exited"]
[connection signal="area_exited" from="Sprite4/Area2D4" to="." method="_on_Area2D4_area_exited"]
[connection signal="area_exited" from="Sprite5/Area2D5" to="." method="_on_Area2D5_area_exited"]
[connection signal="beat" from="Conductor" to="." method="_on_Conductor_beat"]
[connection signal="finished" from="Conductor" to="." method="_on_Conductor_finished"]
[connection signal="measure" from="Conductor" to="." method="_on_Conductor_measure"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
